resolved fdo#67536 export internal equivalents as add-in to .xls

For BIFF .xls export the internal functions that are equivalents of
known add-in functions as those add-in functions.

Change-Id: If37f616a34fdabb3fa971fddad01da3dc1f28ee9